--- a/app/views/cart/createOrder.html.erb
+++ b/app/views/cart/createOrder.html.erb
@@ -51,7 +51,7 @@
     
       <% @overall = shipping + @total %>
       <tr>
-          <td>Shipping &euro;5 (FREE SHIPPING ON ORDERS OVER €70!</td>
+          <td>Shipping &euro;5 (FREE SHIPPING ON ORDERS OVER €70!)</td>
           <td>You Pay &euro; <%= @overall %></td>
       </tr>
       
