--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -37,7 +37,7 @@
         <a href="/cart/<%= item.id %>" class="w3-button w3-large w3-black w3-hover-deep-orange">Add me to cart!</a>
         <% end %>
         
-        <% if session[:login] == 1 %>
+       <% if user_signed_in? && current_user.admin? %>
           <%= link_to 'Edit', edit_item_path(item), :class => "w3-button w3-large w3-black w3-hover-deep-orange", :role => "button"  %>
           <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' }, :class => "w3-button w3-large w3-black w3-hover-deep-orange", :role => "button"  %>
         <% end %>
@@ -50,7 +50,7 @@
     
     <div class="bottomButtons">   
     
-   <% if session[:login] == 1 %>
+  <% if user_signed_in? && current_user.admin? %>
     
        <%= link_to 'Create New Record',  new_item_path, :class => "w3-button w3-large w3-black w3-hover-deep-orange", :role => "button" %>
        
