--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,15 +42,7 @@
           
         <% end %>
         
-     <% if session[:login] == 1 %>
-        
-        <%=link_to "Admin Logout", logout_path, :class => "w3-bar-item w3-button w3-hide-small" %>
-        
-        <% else %>
-        
-        <%=link_to "Admin Login", login_path, :class => "w3-bar-item w3-button w3-hide-small" %>
-        
-        <% end %>
+     
     
     <button onclick="searchFunction()" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red"><i class="fa fa-search"></i></button>
     <div id="mySearch"><%= render 'layouts/search' %></div>
@@ -77,7 +69,7 @@
           
         <% end %>
         
-     <% if session[:login] == 1 %>
+     <% if user_signed_in? && current_user.admin? %>
         
         <%=link_to "Old Logout", logout_path, :class => "w3-bar-item w3-button" %>
         
@@ -106,6 +98,16 @@
 
 
     <div class="pagecontainer">
+      
+      <div class="userStatus">
+        
+         <% if user_signed_in? && current_user.admin? %>
+    You are logged in as a: <strong>Administrator</strong>
+    
+    <% end %>
+        
+      </div>
+      
     <%= yield %>
     </div>
 
